Improvements on Lock Memory
git-svn-id: https://bigstreams.googlecode.com/svn/trunk@24 e9027e87-718f-2365-ccfc-279084edcb2a